# Data-Engineering

./: .gitignore  pyproject.toml
.github/agents/: homework-description.agent.md
01-docker-terraform/: homework-queries.sql
02-workflow-orchestration/: README.md  backfills.py  docker-compose.yml  workflow.py
03-data-warehouse/: Notes.md  README.md  bigquery-hw.sql  load_yellow_taxi_data.py
04-analytics-engineering/: README.md  qeries.sql
04-analytics-engineering/taxi_rides_ny/: ingest.py
04-analytics-engineering/taxi_rides_ny/models/staging/: schema.yml  sources.yml  stg_fhv_tripdata.sql
05-data-platforms/: README.md
06-batch/: Homework.ipynb  README.md
07-streaming/: README.md  docker-compose.yaml
07-streaming/src/: queries.sql
07-streaming/src/consumers/: consumer.py
07-streaming/src/job/: aggregation_job.py  session_job.py  tumbling_tip_job.py
07-streaming/src/producers/: producer.py
Docker and Terraform/: Dockerfile  data-loader.py  discovering-data.ipynb  restarter.sh
Docker and Terraform/terraform/: main.tf  variables.tf
Kestra/: docker-compose.yml  workflow.yml
dlt-workshop/: README.md  ny_taxi_pipeline.py
week_1_homework/: data-loader.py  docker-compose.yaml  homework_solution.md
