[project]
name = "data-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-duckdb>=1.10.0",
    "dlt[duckdb,workspace]>=1.22.2",
    "pandas==2.3.3",
    "prefect-gcp[bigquery,cloud-storage]>=0.6.16",
    "prefect[gcp,sqlalchemy]>=3.6.15",
    "psycopg2==2.9.11",
    "pyarrow>=23.0.0",
    "pyspark>=4.1.1",
    "sqlalchemy==2.0.46",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
